--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 coverage.*
 *.coverprofile
 profile.cov
+config.yaml
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
