--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,7 +13,6 @@
 coverage.*
 *.coverprofile
 profile.cov
-config.yaml
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -28,6 +24,5 @@ go.work.sum
 # env file
 .env
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# Configuration file in root dir
+*config.yaml
