hotfix: adjust to a proper default value for DATA_DIRECTORY

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -10,7 +10,7 @@ UPLOADER_EMAIL: "jane@example.com"
 # Dataset Configuration
 DATASET_ID: "aa-Dataset-abc"
 DATASET_FOLDER: "DATASET_ABC"
-FILE_ID_FOLDER: "/data/"
+DATA_DIRECTORY: "data"
 
 # Authentication
 EMAIL: "myemail@example.com"
