refactor: break out config for each package

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -2,26 +2,19 @@
 # Application Configuration Example. Use this to populate your own config
 # ===============================
 
-# User / Upload Info
-USER_ID: "user-1234"
-UPLOADER: "Jane Doe"
-UPLOADER_EMAIL: "jane@example.com"
-
-# Dataset Configuration
-DATASET_ID: "aa-Dataset-abc"
-DATASET_FOLDER: "DATASET_ABC"
-FILE_ID_FOLDER: "/data/"
-
-# Authentication
-EMAIL: "myemail@example.com"
-PASSWORD: "mypasswordemail"
-
-# API Configuration
+# client.go
 API_HOST: "https://api.example.com"
 ACCESS_TOKEN: "youraccesstoken"
+USER_ID: "user-1234"
+DATASET_ID: "aa-Dataset-abc"
+DATASET_FOLDER: "DATASET_ABC"
+SSL_CA_CERT: "/etc/ssl/certs/ca.crt"
+SSL: true
 
-# SMTP (email) Settings
+# mail.go
+EMAIL_ADDRESS: "myemail@example.com"
+EMAIL_PASSWORD: "mypasswordemail"
+UPLOADER_EMAIL: "jane@example.com"
+UPLOADER_NAME: "Jane Doe"
 SMTP_HOST: "smtp.example.com"
 SMTP_PORT: 587
-USE_TLS: true
-SSL_CA_CERT: "/etc/ssl/certs/ca.crt"
