feat: sepperate db and api logic

--- a/job.yaml.example
+++ b/job.yaml.example
@@ -22,9 +22,9 @@ spec:
           args: ["job"]
           env:
             - name: JOB_TIMEOUT
-              value: 4320 # 4320 minutes = 72 hours
+              value: "4320" # 4320 minutes = 72 hours
             - name: JOB_POLL_RATE
-              value: 180 # 180 minutes = 3 hours
+              value: "180" # 180 minutes = 3 hours
             - name: USER_ID
               value: johndoe@lifescience-ri.eu
             - name: DATASET_ID
