--- a/config.yaml.example
+++ b/config.yaml.example
@@ -9,8 +9,8 @@ DATASET_FOLDER: "DATASET_ABC"
 SSL_CA_CERT: "/etc/ssl/certs/ca.crt"
 
 # job.go
-JOB_TIMEOUT = 3
-JOB_POLL_RATE = 2
+JOB_TIMEOUT: 3
+JOB_POLL_RATE: 2
 
 # client.go
 CLIENT_API_HOST: "https://api.example.com"
