--- a/job.yaml.example
+++ b/job.yaml.example
@@ -14,6 +14,10 @@ spec:
       labels:
         release: pipeline
     spec:
+      securityContext:
+        fsGroup: 65534
+        runAsGroup: 65534
+        runAsUser: 65534
       restartPolicy: Never
       containers:
         - name: submitter
@@ -70,9 +74,13 @@ spec:
             - name: DB_CLIENT_KEY
               value: ""
           securityContext:
-            fsGroup: 65534
-            runAsGroup: 65534
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
             runAsUser: 65534
+            capabilities:
+              drop: ["ALL"]
+            seccompProfile:
+              type: RuntimeDefault
           volumeMounts:
             - name: data-volume
               mountPath: /data
